force-app/main/default/objects/Ai_feature__c/Ai_feature__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AI Feature</label>
</CustomObject>