force-app/main/default/objects/Ai_feature__c/fields/Background_Verification__c.field-meta.xml
<CustomField>
    <fullName>Background_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Background Verification</label>
    <type>Checkbox</type>
</CustomField>