force-app/main/default/objects/Ai_feature__c/fields/Create_Job_Posting_Using_AI__c.field-meta.xml
<CustomField>
    <fullName>Create_Job_Posting_Using_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Job Posting Using AI</label>
    <type>Checkbox</type>
</CustomField>