force-app/main/default/objects/Ai_feature__c/fields/DOCGEN_AI__c.field-meta.xml
<CustomField>
    <fullName>DOCGEN_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOCGEN AI</label>
    <type>Checkbox</type>
</CustomField>