force-app/main/default/objects/Ai_feature__c/fields/Eligibility_Verification_and_ML_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Verification_and_ML_Scoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligibility Verification and ML Scoring</label>
    <type>Checkbox</type>
</CustomField>