force-app/main/default/objects/Ai_feature__c/fields/ESIGN_QES__c.field-meta.xml
<CustomField>
    <fullName>ESIGN_QES__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ESIGN QES</label>
    <type>Checkbox</type>
</CustomField>