force-app/main/default/objects/Ai_feature__c/fields/License_Verification_Using_AI__c.field-meta.xml
<CustomField>
    <fullName>License_Verification_Using_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Verification Using AI</label>
    <type>Checkbox</type>
</CustomField>