force-app/main/default/objects/Ai_feature__c/fields/OPENAI_LLM__c.field-meta.xml
<CustomField>
    <fullName>OPENAI_LLM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPENAI LLM</label>
    <type>Checkbox</type>
</CustomField>