force-app/main/default/objects/Ai_feature__c/fields/Resume_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Resume_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resume Analysis</label>
    <type>Checkbox</type>
</CustomField>