force-app/main/default/objects/Ai_feature__c/fields/SNOWFLAKE_AI__c.field-meta.xml
<CustomField>
    <fullName>SNOWFLAKE_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SNOWFLAKE AI</label>
    <type>Checkbox</type>
</CustomField>